--- a/Pages/Bebidas.xaml
+++ b/Pages/Bebidas.xaml
@@ -18,7 +18,7 @@
 
                     <RowDefinition/>
 
-                    <RowDefinition Height="20"/>
+                    <RowDefinition/>
 
                     <RowDefinition Height="200"/>
 
@@ -26,7 +26,7 @@
 
                     <RowDefinition Height="20"/>
 
-                    <RowDefinition Height="20"/>
+                    <RowDefinition/>
 
                     <RowDefinition Height="200"/>
 
@@ -34,7 +34,7 @@
 
                     <RowDefinition Height="20"/>
 
-                    <RowDefinition Height="20"/>
+                    <RowDefinition/>
 
                     <RowDefinition Height="200"/>
 
