--- a/Pages/MainPage Crear Cuenta.xaml
+++ b/Pages/MainPage Crear Cuenta.xaml
@@ -4,12 +4,12 @@
              
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              
-             x:Class="Marthas_Coffee_App_Movil.Pages.Categorias.Cuenta.CrearCuenta"
+             x:Class="Marthas_Coffee_App_Movil.Pages.MainPage_Crear_Cuenta"
              
-             Title="CrearCuenta">
-
+             Title="Crear Cuenta">
+    
     <ScrollView>
-        
+
         <VerticalStackLayout  Padding="10,10,10,10">
 
             <Grid RowSpacing="20" ColumnSpacing="20">
@@ -29,7 +29,7 @@
                     <RowDefinition/>
 
                     <RowDefinition/>
-    
+
                 </Grid.RowDefinitions>
 
                 <Grid.ColumnDefinitions>
@@ -47,21 +47,21 @@
                 <Label   Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" HorizontalOptions="CenterAndExpand" Text="Rellene los campos" FontSize="20" FontAttributes="Bold"/>
 
                 <Label   Grid.Row="2" Grid.Column="0" Text="Nombres:" FontAttributes="Bold" VerticalOptions="Center"/>
-                         
+
                 <Entry   Grid.Row="2" Grid.Column="1" Placeholder="Ingrese sus nombres"/>
-                         
+
                 <Label   Grid.Row="3" Grid.Column="0" Text="Apellidos:" FontAttributes="Bold" VerticalOptions="Center"/>
-                         
+
                 <Entry   Grid.Row="3" Grid.Column="1" Placeholder="Ingrese sus apellidos"/>
-                         
+
                 <Label   Grid.Row="4" Grid.Column="0" Text="Correo electronico:" FontAttributes="Bold" VerticalOptions="CenterAndExpand"/>
-                         
+
                 <Entry   Grid.Row="4" Grid.Column="1" Placeholder="Ingrese su correo"/>
-                         
+
                 <Label   Grid.Row="5" Grid.Column="0" Text="Número telefónico:" FontAttributes="Bold" VerticalOptions="Center"/>
-                         
+
                 <Entry   Grid.Row="5" Grid.Column="1" Placeholder="Ingrese su número"/>
-                         
+
                 <Button  Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Text="Crear cuenta" FontAttributes="Bold" CornerRadius="25"/>
 
             </Grid>
@@ -69,5 +69,5 @@
         </VerticalStackLayout>
 
     </ScrollView>
-    
+
 </ContentPage>
