--- a/Pages/MainPage Cuenta.xaml
+++ b/Pages/MainPage Cuenta.xaml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8" ?>
-
+    
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              
-             x:Class="Marthas_Coffee_App_Movil.Pages.Cuenta"
+             x:Class="Marthas_Coffee_App_Movil.Pages.MainPage_Cuenta"
              
              IconImageSource="cuentaicono"
              
              Title="Cuenta">
-
+    
     <ScrollView>
 
         <VerticalStackLayout Padding="10,10,10,10">
@@ -59,14 +59,14 @@
                 <Label Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" HorizontalOptions="Center" Text="Restablecer contraseña" FontAttributes="Bold" FontSize="15"/>
 
                 <Button Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Text="Iniciar sesion" x:Name="sesion" FontAttributes="Bold" CornerRadius="25" Clicked="sesion_Clicked"/>
- 
+
                 <Label  Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" HorizontalOptions="Center" Text="¿No tienes una cuenta?" FontAttributes="Bold"/>
-                
+
                 <Button Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Text="Crear cuenta"  x:Name="Crear" FontAttributes="Bold" CornerRadius="25" Clicked="Crear_Clicked"/>
 
             </Grid>
 
-            </VerticalStackLayout>
+        </VerticalStackLayout>
 
     </ScrollView>
 
