--- a/Pages/MainPage Crear Cuenta.xaml
+++ b/Pages/MainPage Crear Cuenta.xaml
@@ -46,9 +46,9 @@
 
                 <Label   Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" HorizontalOptions="CenterAndExpand" Text="Rellene los campos" FontSize="20" FontAttributes="Bold"/>
 
-                <Label   Grid.Row="2" Grid.Column="0" Text="Nombres:" FontAttributes="Bold" VerticalOptions="Center"/>
+                <Label   Grid.Row="2" Grid.Column="0" Text="Username:" FontAttributes="Bold" VerticalOptions="Center"/>
 
-                <Entry   Grid.Row="2" Grid.Column="1" Placeholder="Ingrese sus nombres"/>
+                <Entry   Grid.Row="2" Grid.Column="1" Placeholder="Ingrese sus nombres" x:Name="User"/>
 
                 <Label   Grid.Row="3" Grid.Column="0" Text="Apellidos:" FontAttributes="Bold" VerticalOptions="Center"/>
 
@@ -62,7 +62,7 @@
 
                 <Entry   Grid.Row="5" Grid.Column="1" Placeholder="Ingrese su número"/>
 
-                <Button  Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Text="Crear cuenta" FontAttributes="Bold" CornerRadius="25"/>
+                <Button  Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Text="Crear cuenta" FontAttributes="Bold" CornerRadius="25" Clicked="Registro_Clicked"/>
 
             </Grid>
 
