--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -7,6 +7,8 @@
              xmlns:Pages="clr-namespace:Marthas_Coffee_App_Movil.Pages"
              
              x:Class="Marthas_Coffee_App_Movil.MainPage"
+             
+             NavigationPage.HasNavigationBar="false"
             
              xmlns:android="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.AndroidSpecific;assembly=Microsoft.Maui.Controls" android:TabbedPage.ToolbarPlacement="Bottom">
 
