--- a/Pages/MainPage Inicio.xaml
+++ b/Pages/MainPage Inicio.xaml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8" ?>
-
+    
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              
-             x:Class="Marthas_Coffee_App_Movil.Pages.Inicio"
+             x:Class="Marthas_Coffee_App_Movil.Pages.MainPage_Inicio"
              
              IconImageSource="iconoinicio"
-             
+
              NavigationPage.HasNavigationBar="false"
              
              Title="Inicio">
-
+    
     <ScrollView>
 
         <VerticalStackLayout Padding="10,10,10,10">
@@ -39,7 +39,7 @@
                     <ColumnDefinition/>
 
                 </Grid.ColumnDefinitions>
-                
+
                 <!-- Fila 0 -->
 
                 <Label       Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" FontSize="40" FontAttributes="Bold" Text="Bienvenid@" VerticalOptions="Center" HorizontalOptions="Center"/>
@@ -49,22 +49,22 @@
                 <ImageButton  Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" HorizontalOptions="Center" x:Name="Pasteldefresa" Source="titi.png" Aspect="AspectFit" Padding="0,20,0,5"/>
 
                 <!-- Fila 2 -->
-                
+
                 <Label       Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" HorizontalOptions="Center" FontSize="20" Text="Categorias"  FontAttributes="Bold" Padding="2,2,2,2"/>
 
                 <!-- Fila 3 -->
                 <Button      Grid.Row="3" Grid.Column="0" x:Name="ButtonPlatillos"  Clicked="ButtonPlatillos_Clicked"   Text="Platillos"   CornerRadius="25"/>
-                                                                                                                                                         
+
                 <Button      Grid.Row="3" Grid.Column="1" x:Name="ButtonBebidas"    Clicked="ButtonBebidas_Clicked"     Text="Bebidas"     CornerRadius="25"/>
 
                 <!-- Fila 4 -->
 
                 <Button      Grid.Row="4" Grid.Column="0" x:Name="ButtonPostres"    Clicked="ButtonPostres_Clicked"     Text="Postres"     CornerRadius="25"/>
-                                                                                                                                                         
+
                 <Button      Grid.Row="4" Grid.Column="1" x:Name="ButtonBocadillos" Clicked="ButtonBocadillos_Clicked"  Text="Bocadillos"  CornerRadius="25"/>
 
             </Grid>
-               
+
         </VerticalStackLayout>
 
     </ScrollView>
