--- a/Pages/Categorias/MainPage Postres.xaml
+++ b/Pages/Categorias/MainPage Postres.xaml
@@ -4,12 +4,10 @@
              
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              
-             x:Class="Marthas_Coffee_App_Movil.Pages.Bocadillos"
+             x:Class="Marthas_Coffee_App_Movil.Pages.Categorias.MainPage_Postres"
              
-             NavigationPage.HasNavigationBar="false"
-             
-             Title="Bocadillos">
-
+             NavigationPage.HasNavigationBar="false">
+    
     <ScrollView>
 
         <VerticalStackLayout Padding="10,10,10,10">
@@ -60,27 +58,27 @@
 
                 <!-- Fila 0 -->
 
-                <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" FontSize="30" VerticalOptions="Center" HorizontalOptions="Center" FontAttributes="Bold" Text="Bocadillos"/>
+                <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" FontSize="30" VerticalOptions="Center" HorizontalOptions="Center" FontAttributes="Bold" Text="Postres"/>
 
                 <!-- Fila 1 -->
 
-                <Label Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4" HorizontalOptions="Center" FontSize="20" FontAttributes="Bold" Text="Dulces"/>
+                <Label Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4" HorizontalOptions="Center" FontSize="20" FontAttributes="Bold" Text="Frios"/>
 
                 <!-- Fila 2 -->
 
-                <ImageButton Grid.Row="2" Grid.Column="0" x:Name="chocolat"  Source="chocolat.png"/>
+                <ImageButton Grid.Row="2" Grid.Column="0" x:Name="Pastel" Source="pastel.png"/>
 
-                <ImageButton Grid.Row="2" Grid.Column="1" x:Name="coco"  Source="coco.png"/>
+                <ImageButton Grid.Row="2" Grid.Column="1" x:Name="Mochi"  Clicked="ImageButtonMochi_Clicked" Source="mochi.png"/>
 
-                <ImageButton Grid.Row="2" Grid.Column="2" x:Name="tartaleta" Source="tartaleta.png"/>
+                <ImageButton Grid.Row="2" Grid.Column="2" x:Name="Sandwich" Source="sandwich.png"/>
 
                 <!-- Fila 3 -->
 
-                <Label Grid.Row="3" Grid.Column="0"  FontSize="10" HorizontalOptions="Center" Text="Bocadillo 1"  FontAttributes="Bold"/>
+                <Label Grid.Row="3" Grid.Column="0"  FontSize="10" HorizontalOptions="Center" Text="Postre 1"  FontAttributes="Bold"/>
 
-                <Label Grid.Row="3" Grid.Column="1"  FontSize="10" HorizontalOptions="Center" Text="Bocadillo 2"  FontAttributes="Bold"/>
+                <Label Grid.Row="3" Grid.Column="1"  FontSize="10" HorizontalOptions="Center" Text="Postre 2"  FontAttributes="Bold"/>
 
-                <Label Grid.Row="3" Grid.Column="2"  FontSize="10" HorizontalOptions="Center" Text="Bocadillo 3"  FontAttributes="Bold"/>
+                <Label Grid.Row="3" Grid.Column="2"  FontSize="10" HorizontalOptions="Center" Text="Postre 3"  FontAttributes="Bold"/>
 
                 <!-- Fila 4 -->
 
@@ -98,23 +96,23 @@
 
                 <!-- Fila 5 -->
 
-                <Label Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" HorizontalOptions="Center" FontSize="20" FontAttributes="Bold" Text="Salados"/>
+                <Label Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" HorizontalOptions="Center" FontSize="20" FontAttributes="Bold" Text="Calientes"/>
 
                 <!-- Fila 6 -->
 
-                <ImageButton Grid.Row="6" Grid.Column="0" Source="deditos.png"/>
+                <ImageButton Grid.Row="6" Grid.Column="0" Source="empanadas.png"/>
 
-                <ImageButton Grid.Row="6" Grid.Column="1" Source="mangoverd.png"/>
+                <ImageButton Grid.Row="6" Grid.Column="1" Source="arle.png"/>
 
-                <ImageButton Grid.Row="6" Grid.Column="2" Source="galletas.png"/>
+                <ImageButton Grid.Row="6" Grid.Column="2" Source="pie.png"/>
 
                 <!-- Fila 7 -->
 
-                <Label Grid.Row="7" Grid.Column="0" FontSize="10" Text="Bocadillo 1"   HorizontalOptions="Center" FontAttributes="Bold"/>
+                <Label Grid.Row="7" Grid.Column="0" FontSize="10" Text="Postre 1"   HorizontalOptions="Center" FontAttributes="Bold"/>
 
-                <Label Grid.Row="7" Grid.Column="1" FontSize="10"  Text="Bocadillo 2"  HorizontalOptions="Center" FontAttributes="Bold"/>
+                <Label Grid.Row="7" Grid.Column="1" FontSize="10"  Text="Postre 2"  HorizontalOptions="Center" FontAttributes="Bold"/>
 
-                <Label Grid.Row="7" Grid.Column="2" FontSize="10"  Text="Bocadillo 3" HorizontalOptions="Center" FontAttributes="Bold"/>
+                <Label Grid.Row="7" Grid.Column="2" FontSize="10"  Text="Postre 3" HorizontalOptions="Center" FontAttributes="Bold"/>
 
                 <!-- Fila 8 -->
 
@@ -132,23 +130,23 @@
 
                 <!-- Fila 9 -->
 
-                <Label Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="4" VerticalOptions="Center" HorizontalOptions="Center" FontSize="20" FontAttributes="Bold" Text="Acidos"/>
+                <Label Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="4" VerticalOptions="Center" HorizontalOptions="Center" FontSize="20" FontAttributes="Bold" Text="Dulces"/>
 
                 <!-- Fila 10 -->
 
-                <ImageButton Grid.Row="10" Grid.Column="0" Source="gomitas.png"/>
+                <ImageButton Grid.Row="10" Grid.Column="0" Source="choco.png"/>
 
-                <ImageButton Grid.Row="10" Grid.Column="1" Source="mani.png"/>
+                <ImageButton Grid.Row="10" Grid.Column="1" Source="dulcemilk.png"/>
 
-                <ImageButton Grid.Row="10" Grid.Column="2" Source="kiwi.png"/>
+                <ImageButton Grid.Row="10" Grid.Column="2" Source="alfajores.png"/>
 
                 <!-- Fila 11 -->
 
-                <Label Grid.Row="11" Grid.Column="0" HorizontalOptions="Center" FontSize="10" Text="Bocadillo 1"  FontAttributes="Bold"/>
+                <Label Grid.Row="11" Grid.Column="0" HorizontalOptions="Center" FontSize="10" Text="Postre 1"  FontAttributes="Bold"/>
 
-                <Label Grid.Row="11" Grid.Column="1" HorizontalOptions="Center" FontSize="10"  Text="Bocadillo 2" FontAttributes="Bold" />
+                <Label Grid.Row="11" Grid.Column="1" HorizontalOptions="Center" FontSize="10"  Text="Postre 2" FontAttributes="Bold" />
 
-                <Label Grid.Row="11" Grid.Column="2" HorizontalOptions="Center" FontSize="10"  Text="Bocadillo 3"  FontAttributes="Bold"/>
+                <Label Grid.Row="11" Grid.Column="2" HorizontalOptions="Center" FontSize="10"  Text="Postre 3"  FontAttributes="Bold"/>
 
                 <!-- Fila 12 -->
 
@@ -166,7 +164,7 @@
 
             </Grid>
 
-    </VerticalStackLayout>
+        </VerticalStackLayout>
 
     </ScrollView>
 
