--- a/Pages/Categorias/Bebidas/Frias/FriasBebida3.xaml
+++ b/Pages/Categorias/Bebidas/Frias/FriasBebida3.xaml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
+    
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              
-             x:Class="Marthas_Coffee_App_Movil.Pages.Categorias.Postres.Mochi"
+             x:Class="Marthas_Coffee_App_Movil.Pages.Categorias.Bebidas.Frias.FriasBebida3"
              
-             NavigationPage.HasNavigationBar="false"
-             
-             Title="Mochi">
+             NavigationPage.HasNavigationBar="false">
 
     <ScrollView>
 
@@ -43,11 +42,11 @@
 
                 <!-- Fila 0 -->
 
-                <Label  Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" FontSize="40" FontAttributes="Bold" Text="Mochi" VerticalOptions="Center" HorizontalOptions="Center"/>
+                <Label  Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" FontSize="40" FontAttributes="Bold" Text="Capuchino" VerticalOptions="Center" HorizontalOptions="Center"/>
 
                 <!-- Fila 1 -->
 
-                <Image  Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" Source="mochi.png"/>
+                <Image  Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" Source="calientesbebida1capuchino.png"/>
 
                 <!-- Fila 2 -->
 
